fix alignment of git branch dropdown

--- a/styles/brackets-git.less
+++ b/styles/brackets-git.less
@@ -51,7 +51,7 @@
     /* adjust margins to keep position #project-title position stable after extension is loaded */
     overflow: hidden;
     white-space: nowrap;
-    padding: 2px 5px;
+    padding: 1px 5px;
     margin-left: -5px;
     .dropdown-arrow {
         display: inline-block;
@@ -59,7 +59,7 @@
         height: 5px;
         margin-left: 4px;
         position: relative;
-        top: 7px;
+        top: 8px;
     }
 }
 
